<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultFragment">

        <LinearLayout
            android:id="@+id/result__proba_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_layout">

            <TextView
                android:id="@+id/result_proba_description_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/classification_result_view_description"
                android:text="@string/result_proba_description"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/result_proba_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/result_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="3dp"
            android:orientation="vertical"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/result_description_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/classification_result_view_description"
                android:text="@string/classification_result_view"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/result_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="224dp"
            android:layout_height="224dp"
            android:layout_marginTop="280dp"
            android:background="#000000"
            android:contentDescription="@string/content_description_image_view_preview"
            android:padding="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/result__time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:orientation="vertical"
            android:paddingLeft="2dp"
            android:paddingTop="2dp"
            android:paddingRight="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_layout">

            <TextView
                android:id="@+id/result_time_description_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/classification_result_view_description"
                android:text="@string/result_time_description"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/result_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>